--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "ru-mc-friends-verify",
+  "name": "ru-mc-verify",
   "version": "1.0.0",
   "description": "A bot used only for the Rutgers Minecraft server to verify netids and whitelist people accordingly.",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
     "test": "node dist/index.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^4.6.1",
+    "@prisma/client": "^4.7.1",
     "axios": "^1.2.0",
-    "discord.js": "^14.6.0",
+    "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "nodemailer": "^6.4.17",
-    "prisma": "^4.6.1"
+    "nodemailer": "^6.4.17"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
     "@types/nodemailer": "^6.4.6",
+    "nodemon": "^2.0.20",
+    "prisma": "^4.7.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.3.5"
   }
 }
